# -fastapi-jwt-auth-template

./: .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  README.md  TODO.md  log_config.yml  main.py  pyproject.toml  requirements.txt  requirements2.txt  sonar-project.properties
.github/workflows/: lint.yml  linter.yml  pylint-github-readme.yml  pylint.yml  tests.yml
app/: config.py  database.py  main.py  models.py  routers.py  token.py  user.py  utils.py
app/auth/: exceptions.py  models.py  router.py  schemas.py  session.py  session_store.py  token_store.py  utils.py  validator.py
app/users/: models.py  router.py  schemas.py  utils.py
docs/: fastapi-jwt-auth-template.xmind
tests/auth/: test_session.py  test_session_store.py
